@@ -1,3 +1,7 @@
+2007-03-24  Bruno Haible  <bruno@clisp.org>
+
+	* tsearch.c [!IN_LIBINTL]: Include search.h instead of tsearch.h.
+
 2007-05-20  Bruno Haible  <bruno@clisp.org>
 
 	* vasnprintf.c: Use NEED_PRINTF_INFINITE_DOUBLE instead of
